--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -14,7 +14,15 @@
 
 <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="600.0" prefWidth="800.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.Docentes">
    <content>
-      <VBox prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane>
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints vgrow="NEVER" />
+            <RowConstraints vgrow="NEVER" />
+            <RowConstraints vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
             <GridPane VBox.vgrow="NEVER">
               <columnConstraints>
@@ -22,11 +30,9 @@
                   <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" prefWidth="100.0" />
                   <ColumnConstraints hgrow="NEVER" />
                   <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" />
-                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
                   <RowConstraints fillHeight="false" vgrow="NEVER" />
               </rowConstraints>
                <children>
@@ -45,49 +51,34 @@
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <Label text="Nombre" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Label text="Apellido y nombre" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <Label text="Apellido" GridPane.columnIndex="2">
-                     <GridPane.margin>
-                        <Insets left="10.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar Persona" GridPane.columnIndex="4">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver datos personales" GridPane.columnIndex="4" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </Button>
                </children>
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
             </GridPane>
-            <GridPane alignment="BOTTOM_LEFT">
+            <GridPane alignment="BOTTOM_LEFT" GridPane.rowIndex="1">
                <children>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar">
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver datos personales">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.columnIndex="1">
+                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar" GridPane.columnIndex="2">
+                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar" GridPane.columnIndex="3">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -106,7 +97,7 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </GridPane>
-            <TabPane prefHeight="448.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane prefHeight="448.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
                <tabs>
                   <Tab closable="false" text="Datos">
                      <content>
@@ -114,8 +105,15 @@
                            <content>
                               <VBox>
                                  <children>
-                                    <BorderPane prefHeight="207.0" prefWidth="798.0" VBox.vgrow="ALWAYS">
-                                       <top>
+                                    <GridPane>
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints vgrow="SOMETIMES" />
+                                          <RowConstraints vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
                                           <GridPane>
                                              <children>
                                                 <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar" GridPane.columnIndex="1">
@@ -124,6 +122,11 @@
                                                    </GridPane.margin>
                                                 </Button>
                                                 <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar" GridPane.columnIndex="2">
+                                                   <GridPane.margin>
+                                                      <Insets left="10.0" right="10.0" />
+                                                   </GridPane.margin>
+                                                </Button>
+                                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar Persona">
                                                    <GridPane.margin>
                                                       <Insets left="10.0" right="10.0" />
                                                    </GridPane.margin>
@@ -138,16 +141,17 @@
                                              <rowConstraints>
                                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                              </rowConstraints>
-                                             <BorderPane.margin>
-                                                <Insets bottom="10.0" top="10.0" />
-                                             </BorderPane.margin>
                                           </GridPane>
-                                       </top>
-                                       <center>
-                                          <GridPane alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="778.0" vgap="5.0" BorderPane.alignment="TOP_LEFT">
+                                          <GridPane alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="778.0" vgap="5.0" GridPane.rowIndex="1">
                                              <children>
                                                 <Label text="Estado" />
                                                 <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1">
+                                                   <GridPane.margin>
+                                                      <Insets left="10.0" right="10.0" />
+                                                   </GridPane.margin>
+                                                </ComboBox>
+                                                <Label text="Categoría de investigación" GridPane.rowIndex="1" />
+                                                <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                                    <GridPane.margin>
                                                       <Insets left="10.0" right="10.0" />
                                                    </GridPane.margin>
@@ -160,17 +164,15 @@
                                                 <ColumnConstraints maxWidth="251.0" minWidth="208.0" prefWidth="241.0" />
                                              </columnConstraints>
                                              <rowConstraints>
-                                                <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
                                              </rowConstraints>
-                                             <BorderPane.margin>
-                                                <Insets left="10.0" right="10.0" top="10.0" />
-                                             </BorderPane.margin>
                                           </GridPane>
-                                       </center>
-                                    </BorderPane>
-                                    <Label opacity="0.5" styleClass="label-border" stylesheets="@Style.css" text="Títulos">
+                                       </children>
+                                    </GridPane>
+                                    <Label styleClass="label-border" stylesheets="@Style.css" text="Títulos">
                                        <VBox.margin>
                                           <Insets left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
@@ -223,7 +225,8 @@
                               </VBox>
                            </content>
                         </ScrollPane>
-                     </content></Tab>
+                     </content>
+                  </Tab>
                   <Tab closable="false" text="Cargos">
                      <content>
                         <ScrollPane fitToHeight="true" fitToWidth="true" prefViewportHeight="486.0" prefViewportWidth="798.0">
@@ -390,37 +393,9 @@
                      <content>
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
                            <top>
-                              <GridPane BorderPane.alignment="CENTER">
-                                 <children>
-                                    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar" GridPane.columnIndex="2">
-                                       <GridPane.margin>
-                                          <Insets left="10.0" right="10.0" />
-                                       </GridPane.margin>
-                                    </Button>
-                                    <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar" GridPane.columnIndex="3">
-                                       <GridPane.margin>
-                                          <Insets left="10.0" right="10.0" />
-                                       </GridPane.margin>
-                                    </Button>
-                                 </children>
-                                 <columnConstraints>
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                 </columnConstraints>
-                                 <rowConstraints>
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                 </rowConstraints>
-                                 <BorderPane.margin>
-                                    <Insets bottom="10.0" top="10.0" />
-                                 </BorderPane.margin>
-                              </GridPane>
-                           </top>
-                           <center>
                               <GridPane alignment="TOP_CENTER" vgap="5.0" BorderPane.alignment="CENTER">
                                 <columnConstraints>
-                                  <ColumnConstraints hgrow="NEVER" maxWidth="382.0" minWidth="10.0" prefWidth="93.0" />
+                                  <ColumnConstraints hgrow="NEVER" minWidth="-Infinity" />
                                   <ColumnConstraints hgrow="ALWAYS" maxWidth="685.0" minWidth="10.0" prefWidth="685.0" />
                                 </columnConstraints>
                                 <rowConstraints>
@@ -428,18 +403,30 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                 </rowConstraints>
                                  <children>
-                                    <Label text="Categoría" />
-                                    <Label text="Descripción" GridPane.rowIndex="1" />
-                                    <ComboBox prefHeight="28.0" prefWidth="265.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" />
-                                    <TextField focusTraversable="false" minWidth="-Infinity" mouseTransparent="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                                    <Label text="Categoría de investigación" GridPane.rowIndex="1" />
+                                    <TextField editable="false" focusTraversable="false" minWidth="-Infinity" mouseTransparent="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
                                  </children>
                                  <BorderPane.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </BorderPane.margin>
                               </GridPane>
+                           </top>
+                           <center>
+                              <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                <columns>
+                                  <TableColumn prefWidth="75.0" text="ID proyecto" />
+                                  <TableColumn prefWidth="75.0" text="Nombre proyecto" />
+                                    <TableColumn prefWidth="75.0" text="Área" />
+                                    <TableColumn prefWidth="75.0" text="Cargo" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
                            </center>
                         </BorderPane>
-                     </content></Tab>
+                     </content>
+                  </Tab>
                   <Tab closable="false" text="Incentivos">
                      <content>
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
@@ -499,7 +486,8 @@
                               </TableView>
                            </center>
                         </BorderPane>
-                     </content></Tab>
+                     </content>
+                  </Tab>
                   <Tab closable="false" text="Observaciones">
                      <content>
                         <BorderPane prefHeight="200.0" prefWidth="200.0">
@@ -547,6 +535,6 @@
                </VBox.margin>
             </TabPane>
          </children>
-      </VBox>
+      </GridPane>
    </content>
 </ScrollPane>
