--- a/src/main/java/vista/interfaces/Personas.fxml
+++ b/src/main/java/vista/interfaces/Personas.fxml
@@ -57,7 +57,7 @@
                <left>
                   <GridPane alignment="CENTER" prefHeight="185.0" vgap="5.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Label text="Documento" GridPane.rowIndex="1">
+                        <Label text="Tipo de documento" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets right="10.0" />
                            </GridPane.margin>
@@ -138,16 +138,16 @@
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <Label text="Número" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                        <Label text="Documento" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                            <GridPane.margin>
-                              <Insets right="10.0" />
+                              <Insets left="20.0" right="10.0" />
                            </GridPane.margin>
                         </Label>
                      </children>
                      <columnConstraints>
                         <ColumnConstraints hgrow="NEVER" />
                         <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="267.0" />
-                        <ColumnConstraints maxWidth="250.0" minWidth="69.0" prefWidth="73.0" />
+                        <ColumnConstraints />
                         <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="208.0" prefWidth="272.0" />
                      </columnConstraints>
                      <rowConstraints>
@@ -207,7 +207,7 @@
                      </columnResizePolicy>
                      <columns>
                         <TableColumn prefWidth="253.0" text="Tipo" />
-                        <TableColumn prefWidth="523.0" />
+                        <TableColumn prefWidth="523.0" text="Dato" />
                      </columns>
                   </TableView>
                </center>
