--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -63,11 +63,6 @@
             </GridPane>
             <GridPane alignment="BOTTOM_LEFT" GridPane.rowIndex="1">
                <children>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ver datos personales">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </Button>
                   <Button contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
@@ -142,33 +137,69 @@
                                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                              </rowConstraints>
                                           </GridPane>
-                                          <GridPane alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="778.0" vgap="5.0" GridPane.rowIndex="1">
+                                          <GridPane alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" prefHeight="70.0" prefWidth="778.0" vgap="5.0" GridPane.rowIndex="1">
                                              <children>
-                                                <Label text="Estado" />
-                                                <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1">
+                                                <Label text="Estado" GridPane.rowIndex="3" />
+                                                <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3">
                                                    <GridPane.margin>
                                                       <Insets left="10.0" right="10.0" />
                                                    </GridPane.margin>
                                                 </ComboBox>
-                                                <Label text="Categoría de investigación" GridPane.rowIndex="1" />
-                                                <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                <Label text="Categoría de investigación" GridPane.rowIndex="4" />
+                                                <ComboBox maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                                    <GridPane.margin>
                                                       <Insets left="10.0" right="10.0" />
                                                    </GridPane.margin>
                                                 </ComboBox>
+                                                <Label text="Documento" />
+                                                <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1">
+                                                   <GridPane.margin>
+                                                      <Insets left="10.0" right="10.0" />
+                                                   </GridPane.margin>
+                                                </TextField>
+                                                <Label text="Apellido y nombre" GridPane.columnIndex="2">
+                                                   <GridPane.margin>
+                                                      <Insets left="10.0" />
+                                                   </GridPane.margin>
+                                                </Label>
+                                                <TextField editable="false" focusTraversable="false" maxWidth="1.7976931348623157E308" mouseTransparent="true" GridPane.columnIndex="3">
+                                                   <GridPane.margin>
+                                                      <Insets left="10.0" />
+                                                   </GridPane.margin>
+                                                </TextField>
+                                                <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar persona" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                                                   <GridPane.margin>
+                                                      <Insets left="10.0" />
+                                                   </GridPane.margin>
+                                                </Button>
+                                                <Label text="Legajo" GridPane.rowIndex="2" />
+                                                <TextField GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                                   <GridPane.margin>
+                                                      <Insets left="10.0" right="10.0" />
+                                                   </GridPane.margin>
+                                                </TextField>
                                              </children>
                                              <columnConstraints>
-                                                <ColumnConstraints hgrow="NEVER" />
-                                                <ColumnConstraints minWidth="10.0" prefWidth="200.0" />
-                                                <ColumnConstraints maxWidth="223.0" minWidth="180.0" prefWidth="190.0" />
-                                                <ColumnConstraints maxWidth="251.0" minWidth="208.0" prefWidth="241.0" />
+                                                <ColumnConstraints hgrow="NEVER" maxWidth="195.0" minWidth="178.0" prefWidth="188.0" />
+                                                <ColumnConstraints maxWidth="193.0" minWidth="10.0" prefWidth="181.0" />
+                                                <ColumnConstraints maxWidth="223.0" minWidth="155.0" prefWidth="155.0" />
+                                                <ColumnConstraints hgrow="ALWAYS" />
                                              </columnConstraints>
                                              <rowConstraints>
+                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="SOMETIMES" />
                                              </rowConstraints>
+                                             <opaqueInsets>
+                                                <Insets />
+                                             </opaqueInsets>
+                                             <GridPane.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </GridPane.margin>
                                           </GridPane>
                                        </children>
                                     </GridPane>
